--- a/1/aboutuspage.html
+++ b/1/aboutuspage.html
@@ -29,20 +29,21 @@
         <h2>Motto</h2>
         <p>“Though the stars may change, the mind remains the same.”</p>
      </div>
-     <div id="mid">
-        <img src="LOGO.png" width="400" height="300">
-     </div>
      <div id="right">
         <h2>School Address</h2>
         <p>215 Anzac Pde, <br>Kensington New South Wales 2052</p>
      </div>
      <br><br><br><br><br><br><br>
-     <img src="3.jpg" width="550" height="362">
-     <div id="ccc">
-     <img src="4.jpg" width="550" height="362">
-     </div>
+     <div class="w3-content w3-display-container" align="center">
+      <img class="mySlides" src="3.jpg" width="600" height="402">
+      <img class="mySlides" src="4.jpg" width="600" height="402">
+      <img class="mySlides" src="5.jpg" width="600" height="402">
+      <img class="mySlides" src="6.jpg" width="600" height="402">
+      <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
      <div id="footer">
         <p id="fp2">Welcome to FKC<BR>Joel</p>
      </div>
+     <script src="aboutuspage.js"></script>
 </body>
 </html>
