--- a/1/contactpage.html
+++ b/1/contactpage.html
@@ -26,14 +26,19 @@
     <img src="LOGO.png" width="200" height="150">
     <br>
     <br>
+    <div id="img" align="center">
+        <img src="123.jpg" width="1300" height="750">
+    </div>
     <div id="ci">
         <h2>Contact information</h2>
         <p>Email:88888888@Email.com</p>
         <p>Phone number:+61 88888888</p>
     </div>
+    <a href="https://map.baidu.com/poi/New%20College%20Village/@16834261.24191764,-3994183.5921826456,15.33z?uid=d4587cdd963d1f271ee9997a&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&pcevaname=pc4.1&querytype=detailConInfo&da_src=shareurl">
     <div id="sa">
         <h2>School Address</h2>
         <p>215 Anzac Pde,<br> Kensington New South Wales 2052</p>
+        <br><p>Click here to map</p> 
     </div>
     <br><br><br><br><br><br><br><br>
     <div id="footer">
