--- a/1/enquiryform.html
+++ b/1/enquiryform.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div id="top">
-        
         <div id="search">
             <input type="text" id="input1" placeholder="Search...">
             <button type="button">research</button>
@@ -30,19 +29,20 @@
      </div>
      <div id="form">
         <br>
-        <h3>Your name</h3>
-        <textarea name="Your name" id="Your name" cols="30" rows="3"></textarea>
+        <h3>Name</h3>
+        <textarea name="Name" id="Name" cols="30" rows="3"></textarea>
         <h3>Email address</h3>
         <textarea name="Email address" id="Email address" cols="30" rows="3"></textarea>
         <h3>Phone number</h3>
         <textarea name="Phone number" id="Phone number" cols="30" rows="3"></textarea>
         <h3>Message</h3>
         <textarea name="Message" id="Message" cols="30" rows="3"></textarea><br>
-        <a aria-label="Submit" rel="noopener noreferrer" class="but1" target="_top">Submit</a>
-    </div>
+        <button type="button" id="but1" onclick="sub1()">Submit</a>
+     </div>
     <br><br><br><br>
     <div id="footer">
         <p id="fp2">welcome to FKC<br>JOEL</p>
-    </div>
+     </div>
+     <script src="enquiryform.js"></script>
 </body>
 </html>
