Update and rename homepage.html to indexpage.html

--- a/1/indexpage.html
+++ b/1/indexpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="indexpage.css">
     <title>Home Page</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     </div>
     <nav>
         <ul>
-          <li><a href="homepage.html">Home Page</a></li>
+          <li><a href="indexpage.html">Home Page</a></li>
           <li><a href="aboutuspage.html">About Us Page</a></li>
           <li><a href="coursedetails.html">Course details</a></li>
           <li><a href="enquiryform.html">Enquiry form</a></li>
