--- a/1/coursedetails.html
+++ b/1/coursedetails.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
         <ul>
-          <li><a href="homepage.html">Home Page</a></li>
+          <li><a href="indexpage.html">Home Page</a></li>
           <li><a href="aboutuspage.html">About Us Page</a></li>
           <li><a href="coursedetails.html">Course details</a></li>
           <li><a href="enquiryform.html">Enquiry form</a></li>
